Changed message,style,added right click test

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,1 +1,11 @@
-<p>header works!</p>
+<div class="header">
+   <!-- <div><p>{{curDate | date:'dd MMM yyyy HH:mm:ss a'}}</p>
+        <P>{{curDate}}</P>
+    </div> -->
+    <span> VECTRA C MESSENGER </span>
+    <div class="fltr">
+         <i class="fa fa-search"></i>
+         <img class="user-im" src="../../../assets/images/test.jpg" alt="">
+         <i class="fa fa-caret-down"></i>
+     </div>        
+ <div>
