--- a/src/app/components/app/app.component.html
+++ b/src/app/components/app/app.component.html
@@ -1,4 +1,54 @@
-<h4>My first app</h4>
+<!-- <app-header></app-header>
 <router-outlet>
-
+</router-outlet> -->
+<app-header></app-header>
+<div class="left">
+    <app-chatroom (click)="getMessages(c)" *ngFor="let c of chatRooms" [c]="c"></app-chatroom>
+  </div>
+  
+  <div class="right" *ngIf="showchatRoomPanel">
+    <div class="subhead">
+      <div>
+        <img src="../../../assets/images/test.jpg" alt="">
+          <div class="grp">
+          <ul>
+              <li class="fbl">{{chatRoomName}}</li>
+              <li class="fgr">{{chatRoomMembers}}  participants</li>
+          </ul>
+          </div>
+        <!-- ovjde je potrebno more vert button  -->
+        
+          <i class="fas fa-ellipsis-v">s</i>
+      </div>
+      <div class="rgt">
+        <i class="fa fa-search"></i>
+      </div>
+    </div> 
+    <p class="conv-started">Conversation started at: </p>
+    <div class="container-msg">
+      <div class="message" *ngFor= 'let m of messages'>
+        <app-message [message]="m"  [replayMessage]="getReplayMessage(m,messages)"  (click)="clickMessage(m)" (contextmenu)="onRightClick($event)"></app-message>
+      </div> 
+    </div> 
+    <div>
+     
+    </div>  
+    <div class="test">
+      <!--U ovaj replay box neophodno injectovati poruku -->
+      <div class="replaybox" *ngIf="showReplayBox"> 
+        <h6>{{mess.sender}}</h6>
+        <p>{{mess.text}}</p>
+        <i class="fa fa-window-close" aria-hidden="true" (click)="removeReplayBox()" ></i>
+       </div> 
+        <span class="at" style="display: inline-block;margin: 7px;">@</span>
+        <input class="inp" type="text" placeholder="Type message" [(ngModel)]="message.text">
+        <i class="fa fa-microphone cl-gr"></i>
+        <div class="i-out">
+            <i class="fa fa-smile-o" style="color:blue;"  aria-hidden="true"></i> 
+            <i class="fa fa-paperclip" aria-hidden="true" style="color:blue;"></i>
+            <i class="fa fa-paper-plane" aria-hidden="true"  (click)="sendMessage(message,openedChatroom)"></i>
+        </div>  
+    </div>   
+</div> 
+<router-outlet> 
 </router-outlet>
