--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,16 @@
 /* You can add global styles to this file, and also import other style files */
+*{
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+.inbl{
+    display: inline-block;
+}
+i:hover{
+    cursor: pointer;
+}
+
+.fbl{
+    font-weight: bold;
+}
