--- a/src/app/components/chatroom/chatroom.component.html
+++ b/src/app/components/chatroom/chatroom.component.html
@@ -2,7 +2,7 @@
     <img src="../../../assets/images/test.jpg" alt="" />
         <div class="head" >
             <h5 class="title inbl">{{c.name}}</h5>
-            <p class="date inbl">16.06.2040</p>
+            <p class="date inbl">{{ convD.toDateString() }}</p>
         </div>
         <p class="message">   
          Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem non dolor unde a sit?Eos tempore at nobis veritatis sed! At odio architecto placeat labore iure quae ea itaque nostrum.
