--- a/src/app/components/message/message.component.html
+++ b/src/app/components/message/message.component.html
@@ -1,22 +1,29 @@
-
-<div class="container" style="display: flex;">
-    <img src="../../../assets/images/test.jpg" alt="">
-<div class="message"> 
-    <h5>{{ message.sender }}</h5>
-    <div class="replayMessage" *ngIf="message.replayToMessage">
-        <h5>{{ replayMessage.sender }}</h5>
-        <p class="content">{{ replayMessage.text }}</p>
+<div class="container" style="display:flex;">
+    <img src="../../../assets/images/test.jpg" alt=""> 
+    <div class="message">
+       <div class="headM">
+            <h5>{{ message.sender }}</h5>
+            <i (click)="showRight()" class="fa fa-ellipsis-v more" aria-hidden="true"></i>
+        </div>
+        <div class="replayMessage" *ngIf="message.replayToMessage" >
+            <h5>{{replayMessage.sender}}</h5>
+            <p class="content">{{ replayMessage.text }}</p>
+        </div> 
+        <div class="text">
+            <p class="content">{{ message.text }}</p>
+        </div>
+        <div class="timedate">
+            <p class="time">{{ convD.toLocaleTimeString() }}</p>
+          <!-- <p class="date">{{ convD.toDateString() }}</p>  --> 
+        </div>       
+    </div>   
+    <div class='rghthC' *ngIf="displayRight">
+        <ul>
+            <li (click)="showInReplayBox()">Replay</li>
+            <li (click)="copyToClipboard()">Copy text</li>
+            <li>Forward</li>
+            <li>Select</li>
+            <li (click)="deleteMessage()">Delete</li>
+        </ul>
     </div>
-    <p class="content">{{ message.text }}</p>
-    <p class="date">{{ message.date }}</p> 
-</div>
-<div class='rghthC'>
-    <ul>
-        <li>Replay</li>
-        <li>Copy text</li>
-        <li>Forward</li>
-        <li>Select</li>
-        <li>Delete</li>
-</ul>
-</div>
 </div>
