--- a/src/app/components/app/app.component.scss
+++ b/src/app/components/app/app.component.scss
@@ -116,24 +116,37 @@ app-message{
 .subhead{
     background-color: white;
     position: fixed;
-    width: 100%;
+    width: 73%;
     z-index:3;
     box-shadow: 1px 1px 1px rgb(233, 233, 233);
+    display: flex;
 }
 .subhead img{
     display: inline-block !important;
     width: 50px;
     height: 50px;
     border-radius: 50%;
-    margin:0.4rem;
+    margin:0.3rem;
 }
 .grp{
+   margin-left: 0.2rem;
     display: inline-block;
-    vertical-align: middle;
-    position: relative;  
+    position: relative;
+    bottom: 0.9rem;
 }
+.grp li {
+    margin-bottom: 2px;
+} 
+
 .rgt{
-    text-align: right;
+    margin-left: auto;
+    margin-right: 3.3%;
+    display: flex;  
+}
+.rgt > i{
+    position: relative;
+    margin-right: 100%; 
+    top: 50%;
 }
 .replaybox{
     background-color: rgb(213, 209, 209);
@@ -170,7 +183,7 @@ app-message{
     &:focus{
         cursor: text;
         border: none;
-          outline: 3px solid rgb(199, 199, 202);
+        outline: 3px solid rgb(199, 199, 202);
     }
 }
 
@@ -183,4 +196,7 @@ app-message{
 }
 .replaym{
     width: 90%;
+}
+.subhp1{
+    display: inline-block;
 }
