--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,11 +1,29 @@
 <div class="header">
-   <!-- <div><p>{{curDate | date:'dd MMM yyyy HH:mm:ss a'}}</p>
-        <P>{{curDate}}</P>
-    </div> -->
     <span> VECTRA C MESSENGER </span>
     <div class="fltr">
          <i class="fa fa-search"></i>
          <img class="user-im" src="../../../assets/images/test.jpg" alt="">
-         <i class="fa fa-caret-down"></i>
+         <!-- <i class="fa fa-caret-down"></i> -->
+         <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
+            <mat-icon>keyboard_arrow_down</mat-icon>
+          </button>
+          <mat-menu #menu="matMenu" >
+            <button mat-menu-item routerLink='login'>
+              <mat-icon>login</mat-icon>
+              <span>Login</span>
+            </button>
+            <button mat-menu-item (click)="logout()" *ngIf="isLoggedIn()">
+              <mat-icon>logout</mat-icon>
+              <span>Logout</span>
+            </button>
+            <button mat-menu-item routerLink='profile'>
+              <mat-icon>profile</mat-icon>
+              <span>Profile</span>
+            </button>
+            <button mat-menu-item routerLink='main'>
+                <mat-icon>profile</mat-icon>
+                <span>Messenger</span>
+              </button>
+          </mat-menu>
      </div>        
  <div>
